# cocoa-rs

./: .gitignore  Cargo.toml  build.rs  struct.go  x86_64-10.10.json
examples/: my_app.rs
src/: appkit.rs  main.rs
