[package]
authors = ["The Servo Project Developers"]
build = "build.rs"
description = "Bindings to Cocoa for OS X"
homepage = "https://github.com/servo/cocoa-rs"
license = "MIT / Apache-2.0"
name = "cocoa"
repository = "https://github.com/servo/cocoa-rs"
version = "0.9.0"

[[bin]]
name = "main"

[dependencies]
bitflags = "0.7"
block = "0.1"
core-graphics = "0.8"
libc = "0.2"
objc = "0.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[lib]
crate-type = ["rlib"]
name = "cocoa"
